Revert #109 because it broke things.